--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,55 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+
+  <ion-segment [value]="tipoDeChartSeleccionado" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="bar-chart">BAR-CHART</ion-segment-button>
+    <ion-segment-button value="line-chart">LINE-CHART</ion-segment-button>
+    <ion-segment-button value="pie-chart">PIE-CHART</ion-segment-button>
+  </ion-segment>
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-grid *ngIf="tipoDeChartSeleccionado === 'bar-chart'">
+      <ion-row>
+        <ion-col size="6">
+          <app-bar-chart
+            [tipoDeChartSeleccionado]="tipoDeChartSeleccionado"
+            [backgroundColorCat]="backgroundColorCat"
+            [borderColorCat]="borderColorCat"
+          ></app-bar-chart>
+        </ion-col>
+        <ion-col size="6">
+          <ion-row>
+            <ion-col size="12">
+              <app-line-chart
+                [tipoDeChartSeleccionado]="tipoDeChartSeleccionado"
+              ></app-line-chart>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <app-pie-chart
+                [tipoDeChartSeleccionado]="tipoDeChartSeleccionado"
+                [backgroundColorCat]="backgroundColorCat"
+                [borderColorCat]="borderColorCat"
+              ></app-pie-chart>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+  <app-line-chart
+    *ngIf="tipoDeChartSeleccionado === 'line-chart'"
+    [tipoDeChartSeleccionado]="tipoDeChartSeleccionado"
+  ></app-line-chart>
+
+  <app-pie-chart
+    *ngIf="tipoDeChartSeleccionado === 'pie-chart'"
+    [tipoDeChartSeleccionado]="tipoDeChartSeleccionado"
+    [backgroundColorCat]="backgroundColorCat"
+    [borderColorCat]="borderColorCat"
+  ></app-pie-chart>
+
 </ion-content>
