--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,6 @@
 <ion-header [translucent]="true">
 
+  <!-- Creamos un ion-segment-->
   <ion-segment [value]="tipoDeChartSeleccionado" (ionChange)="segmentChanged($event)">
     <ion-segment-button value="bar-chart">BAR-CHART</ion-segment-button>
     <ion-segment-button value="line-chart">LINE-CHART</ion-segment-button>
@@ -10,6 +11,7 @@
 
 <ion-content [fullscreen]="true">
 
+    <!-- Hacemos una llamada mixta y para ello creamos un ion grid-->
     <ion-grid *ngIf="tipoDeChartSeleccionado === 'bar-chart'">
       <ion-row>
         <ion-col size="6">
@@ -40,11 +42,13 @@
       </ion-row>
     </ion-grid>
 
+  <!-- Llamamos directamente al componente line-chart-->
   <app-line-chart
     *ngIf="tipoDeChartSeleccionado === 'line-chart'"
     [tipoDeChartSeleccionado]="tipoDeChartSeleccionado"
   ></app-line-chart>
 
+  <!-- Llamamos directamente al componente pie-chart-->
   <app-pie-chart
     *ngIf="tipoDeChartSeleccionado === 'pie-chart'"
     [tipoDeChartSeleccionado]="tipoDeChartSeleccionado"
