--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
 
 <ion-content [fullscreen]="true">
 
-    <!-- Hacemos una llamada mixta y para ello creamos un ion grid-->
+    <!-- Hacemos una llamada mixta al componente bar-chart y para ello creamos un ion grid-->
     <ion-grid *ngIf="tipoDeChartSeleccionado === 'bar-chart'">
       <ion-row>
         <ion-col size="6">
